first fixes, versions, others, working relay node

--- a/roles/cardano-node/tasks/configure.yml
+++ b/roles/cardano-node/tasks/configure.yml
@@ -95,7 +95,7 @@
 
 - name: "Configure Node | Download configurations (iohk)"
   get_url:
-    url: "{{ cardano_config_download}}{{ cardano_node_config }}-{{ item}}.json"
+    url: "{{ cardano_config_download}}{{ item}}.json"
     dest: "{{ cardano_config_dir }}/"
   become_user: "{{ server_username }}"
   timeout: 25
@@ -104,6 +104,8 @@
     - "byron-genesis"
     - "shelley-genesis"
     - "alonzo-genesis"
+    - "conway-genesis"
+    - "topology"
     - "config"
   tags:
     - configure
@@ -149,3 +151,9 @@
     - configure
     - poolmeta
  
+- name: "Configure Node | Set timezone"
+  shell: sudo timedatectl set-timezone {{timezone}}
+
+  tags:
+    - configure
+    - poolmeta
