Update playbook to install/update 8.7.2, change repo to IntersectMBO

--- a/roles/cardano-node/defaults/main.yml
+++ b/roles/cardano-node/defaults/main.yml
@@ -14,12 +14,16 @@ ghc_install_version: 8.10.7
 ghc_install_url: "https://downloads.haskell.org/~ghc/{{ ghc_install_version }}/ghc-{{ ghc_install_version }}-x86_64-deb9-linux.tar.xz"
 
 # Libsodium
-libsodium_github_url: "https://github.com/input-output-hk/libsodium"
+libsodium_github_url: "https://github.com/IntersectMBO/libsodium"
 libsodium_version_tag:  "66f017f1"
 
 # Libsecp256k1
 secp256k1_github_url: "https://github.com/bitcoin-core/secp256k1"
 secp256k1_tag: "ac83be33"
+
+#BLST
+blst_github_url: "https://github.com/supranational/blst"
+blst_version_tag: "v0.3.10"
 
 # Cluster configuration
 cardano_node_config: "mainnet"
@@ -27,10 +31,10 @@ cardano_node_config: "mainnet"
 
 # Cardano
 cardano_node_build_number: "113437330"
-cardano_github_repo: "https://github.com/input-output-hk/cardano-node.git"
-cardano_github_release_url: "https://api.github.com/repos/input-output-hk/cardano-node/releases/latest"
+cardano_github_repo: "https://github.com/IntersectMBO/cardano-node.git"
+cardano_github_release_url: "https://api.github.com/repos/IntersectMBO/cardano-node/releases/latest"
 cardano_config_download: "https://book.world.dev.cardano.org/environments/{{ cardano_node_config }}/"
-cardano_version_tag: "8.1.2"
+cardano_version_tag: "8.7.2"
 cardano_install_dir: "/opt/cardano/cnode"
 cardamo_cli_path: "cardano-cli"
 cardano_config_dir: "{{ cardano_install_dir }}/configuration"
@@ -62,7 +66,7 @@ cardano_community_gliveview_env: "https://raw.githubusercontent.com/cardano-comm
 cardano_submit_api: false
 cardano_submit_api_config_dir: "cardano-submit-api/config"
 cardano_submit_api_config_filename: "tx-submit-mainnet-config.yaml"
-cardano_tx_submit_mainnet_config: "https://raw.githubusercontent.com/input-output-hk/cardano-node/master/cardano-submit-api/config/tx-submit-mainnet-config.yaml"
+cardano_tx_submit_mainnet_config: "https://raw.githubusercontent.com/IntersectMBO/cardano-node/master/cardano-submit-api/config/tx-submit-mainnet-config.yaml"
 cardano_tx_submit_service: "tx-api.service"
 cardano_tx_submit_description: "Cardano TX Submit API"
 cardano_tx_submit_syslog_id: "cardano-tx-api"
