--- a/roles/cardano-node/tasks/update.yml
+++ b/roles/cardano-node/tasks/update.yml
@@ -48,9 +48,8 @@
   tags:
     - update
 
-
 - name: "Node update | Building Cardano node"
-  shell: cd /home/{{ server_username }}/cardano-node && cabal build cardano-node cardano-cli
+  shell: cd /home/{{ server_username }}/cardano-node && cabal build cardano-node cardano-cli --upgrade-dependencies 
   tags:
     - update
 
